css/main.css
/* General Rules */
body, html {
  height: 100%;
}

body {
  font-family: 'Lora', serif;
  font-size: 100%;
  background: url('../images/Darkbackground.jpg');
  background-attachment: fixed;
}

/* Header */
#header {
  height: 100%;
}

#wrapper  {
  height: 100%;
  background: url('../images/professional1.jpg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  border-bottom: .5em solid silver;
}

#content {
  height: 100%;
  width: 100%;
  display: table;
}

#content-box {
  display: table-cell;
  vertical-align: middle;
  text-align: center;
}

#header #content img {
  width: 8em;
  height: 8em;
  display: inline;
  border-radius: 100%;
}

#header p {
  font-size: 2em;
  font-weight: bolder;
  margin: 0;
  color: #95a5a6;
}

#header p:hover {
  color: white;
}

/* Navbar */

.navbar {
  background-color: transparent;
  border: 0;
  padding: 10px;
}

.navbar button {
  background-color: transparent;
}

.navbar button:hover {
  background-color: azure!important;
}

.navbar-brand {
  color: #95a5a6!important;
  font-size: 1.3em;
}

.navbar a:not(.navbar-brand){
  color:#95a5a6!important;
  font-size: 1em;
  font-weight: bolder;
}

.navbar a:hover {
  color: azure!important;
}

.dropdown-menu a:hover{
  background-color: transparent;
  color: azure!important;
}

/* Photos */

#photos {
  padding: 3em 2em;
}

.col-md-4 {
  position: relative;
}

#photos img {
  width: 100%;
  height: 15em;
  margin: 2em 0;
  border-radius: 2em;
  transition: transform 2s ease-in-out;
}

#photos img:hover {
  opacity: 0.8;
  transform: scale(1.15);
}

#photos h2 {
  position: absolute;
  top: 40%;
  left: 50%;
  transform: translate(-50%,-50%);
  border-top: 0.15em solid black;
  border-bottom: 0.15em solid black;
  color: white;
  display: none;
  font-size: 3em;
}

#photos .col-md-4:hover h2 {
  display: block;
}

